--- a/.github/workflows/build-test-image.yaml
+++ b/.github/workflows/build-test-image.yaml
@@ -24,6 +24,16 @@ jobs:
           sudo rm -rf /usr/local/lib/android /usr/share/dotnet /opt/ghc
           df -h
 
+      - name: Force IPv4 for apt in Docker builds
+        run: |
+          # Create a custom daemon.json to force IPv4 DNS
+          echo '{
+            "dns": ["8.8.8.8", "8.8.4.4"],
+            "dns-opts": ["use-vc"],
+            "ipv6": false
+          }' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
+
       - name: Build and test the image if any image file(s) changed
         uses: jupyterhub/repo2docker-action@master
         with:
